[metadata]
name = plover_wpm_meter
version = 0.1
description = A meter to show your typing speed in Plover
long_description = file: README.md
author = Waleed Khan
author_email = me@waleedkhan.name
license = GNU General Public License v3 (GPLv3)
url = https://github.com/arxanas/plover_wpm_meter
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
	plover>=4.0.0.dev2
	textstat>=0.3.1
packages =
	plover_wpm_meter

[options.entry_points]
plover.gui.qt.tool =
	wpm_meter = plover_wpm_meter:PloverWpmMeter
	strokes_meter = plover_wpm_meter:PloverStrokesMeter

# vim: commentstring=#\ %s list
